adds additional views

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "@libsql/client": "^0.15.4",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
