--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "drizzle-orm": "^0.43.1",
     "isbot": "^5.1.28",
+    "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
@@ -35,4 +36,3 @@
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
-
