--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.54.2",
     "react-router": "^7.6.2",
     "recharts": "^2.15.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.1.10",
     "zod": "^3.25.74"
