--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@libsql/client": "^0.15.9",
+    "@mjackson/file-storage": "^0.7.0",
+    "@mjackson/form-data-parser": "^0.9.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -49,6 +51,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
+    "react-image-crop": "^11.0.10",
     "react-router": "^7.6.2",
     "recharts": "^2.15.1",
     "slugify": "^1.6.6",
