--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,9 @@
     "paths": {
       "~/*": [
         "./app/*"
+      ],
+      "@/*": [
+        "./app/*"
       ]
     },
     "esModuleInterop": true,
