--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "motobase",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@10.2.1",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
@@ -12,68 +13,68 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.4",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@libsql/client": "^0.15.10",
+    "@hookform/resolvers": "^5.2.2",
+    "@libsql/client": "^0.15.15",
     "@mjackson/file-storage": "^0.7.0",
     "@mjackson/form-data-parser": "^0.9.1",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.15",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-menubar": "^1.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-scroll-area": "^1.2.9",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@radix-ui/react-toast": "^1.2.14",
-    "@radix-ui/react-tooltip": "^1.2.7",
-    "@react-router/node": "^7.7.0",
-    "@react-router/serve": "^7.7.0",
-    "@tailwindcss/vite": "^4.1.11",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-router/node": "^7.9.3",
+    "@react-router/serve": "^7.9.3",
+    "@tailwindcss/vite": "^4.1.14",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.43.1",
     "embla-carousel-react": "^8.6.0",
-    "isbot": "^5.1.28",
+    "isbot": "^5.1.31",
     "lucide-react": "^0.518.0",
-    "react": "^19.1.0",
+    "react": "^19.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.64.0",
     "react-image-crop": "^11.0.10",
-    "react-router": "^7.7.0",
+    "react-router": "^7.9.3",
     "recharts": "^2.15.4",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^4.1.14",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.7.0",
+    "@react-router/dev": "^7.9.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^20.19.9",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "drizzle-kit": "^0.31.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/node": "^20.19.19",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "drizzle-kit": "^0.31.5",
+    "jsdom": "^24.1.3",
+    "typescript": "^5.9.3",
+    "vite": "^6.3.6",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.0.5",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "jsdom": "^24.0.0"
+    "vitest": "^2.1.9"
   }
 }
