--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "typecheck": "react-router typegen && tsc",
     "studio": "drizzle-kit studio",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "db:migrate": "ts-node ./scripts/migrate.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -43,38 +44,41 @@
     "@react-router/node": "^7.9.3",
     "@react-router/serve": "^7.9.3",
     "@tailwindcss/vite": "^4.1.14",
+    "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "drizzle-orm": "^0.43.1",
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
     "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
-    "lucide-react": "^0.518.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.2.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.64.0",
     "react-image-crop": "^11.0.10",
     "react-router": "^7.9.3",
-    "recharts": "^2.15.4",
+    "recharts": "^3.2.1",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
-    "zod": "^3.25.76"
+    "ts-node": "^10.9.2",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.3",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^20.19.19",
+    "@types/node": "^24.6.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "drizzle-kit": "^0.31.5",
-    "jsdom": "^24.1.3",
+    "jsdom": "^27.0.0",
     "typescript": "^5.9.3",
-    "vite": "^6.3.6",
+    "vite": "^7.1.9",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.9"
+    "vitest": "^3.2.4"
   }
 }
