adds eslint and fixes linter issues

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "studio": "drizzle-kit studio",
     "test": "vitest run",
     "test:watch": "vitest",
+    "lint": "eslint . --ext .ts,.tsx",
     "db:migrate": "ts-node ./scripts/migrate.ts"
   },
   "dependencies": {
@@ -74,7 +75,13 @@
     "@types/node": "^24.7.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "drizzle-kit": "^0.31.5",
+    "eslint": "^9.37.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^6.1.1",
     "jsdom": "^27.0.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.9",
