--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -20,9 +20,9 @@ jobs:
           fetch-depth: 0
 
       - name: Install GitVersion
-        uses: GitTools/actions/gitversion/setup@v4
+        uses: gittools/actions/gitversion/setup@v4.1.0
         with:
-          versionSpec: '5.x'
+          versionSpec: "6.3.x"
 
       - name: Determine version
         id: gitversion
