--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "vitest",
     "lint": "eslint . --ext .ts,.tsx",
     "db:migrate": "ts-node ./scripts/migrate.ts",
-    "approve-builds": "pnpm approve-builds"
+    "approve-builds": "pnpm approve-builds",
+    "release-it": "release-it"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -69,7 +70,10 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@csmith/release-it-calver-plugin": "^2023.12.0",
+    "@favoloso/conventional-changelog-emoji": "^0.10.0",
     "@react-router/dev": "^7.9.4",
+    "@release-it/conventional-changelog": "^10.0.1",
     "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -84,6 +88,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "jsdom": "^27.0.1",
+    "release-it": "^19.0.5",
     "typescript": "^5.9.3",
     "vite": "^7.1.10",
     "vite-tsconfig-paths": "^5.1.4",
