--- a/.release-it.json
+++ b/.release-it.json
@@ -12,7 +12,7 @@
       "increment": "calendar.minor"
     },
     "@release-it/conventional-changelog": {
-      "preset": "@favoloso/emoji",
+      "preset": "conventionalcommits",
       "infile": "CHANGELOG.md"
     }
   }
