--- a/.release-it.json
+++ b/.release-it.json
@@ -1,7 +1,8 @@
 {
   "$schema": "https://unpkg.com/release-it@19/schema/release-it.json",
   "git": {
-    "commitMessage": "chore: release v${version}"
+    "tagName": "${version}",
+    "commitMessage": "chore: release ${version}"
   },
   "github": {
     "release": true
