--- a/package.json
+++ b/package.json
@@ -88,9 +88,10 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "jsdom": "^27.0.1",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "release-it": "^19.0.5",
     "typescript": "^5.9.3",
-    "vite": "^7.1.10",
+    "vite": "^7.1.11",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   },
