--- a/.release-it.json
+++ b/.release-it.json
@@ -14,7 +14,50 @@
     },
     "@release-it/conventional-changelog": {
       "preset": "conventionalcommits",
-      "infile": "CHANGELOG.md"
+      "infile": "CHANGELOG.md",
+      "types": [
+        {
+          "type": "feat",
+          "section": "✨ Features"
+        },
+        {
+          "type": "fix",
+          "section": "🐛 Bug Fixes"
+        },
+        {
+          "type": "perf",
+          "section": "⚡ Performance Improvements"
+        },
+        {
+          "type": "revert",
+          "section": "⏪ Reverts"
+        },
+        {
+          "type": "docs",
+          "section": "📝 Documentation"
+        },
+        {
+          "type": "style",
+          "section": "💄 Styles",
+          "hidden": true
+        },
+        {
+          "type": "chore",
+          "section": "✏️ Miscellaneous Chores"
+        },
+        {
+          "type": "ref",
+          "section": "♻️ Code Refactoring"
+        },
+        {
+          "type": "test",
+          "section": "✅ Tests"
+        },
+        {
+          "type": "ci",
+          "section": "👷 Continuous Integration"
+        }
+      ]
     }
   }
 }
