docs: updates github release name

--- a/.release-it.json
+++ b/.release-it.json
@@ -5,7 +5,8 @@
     "commitMessage": "chore: release ${version}"
   },
   "github": {
-    "release": true
+    "release": true,
+    "releaseName": "${version}"
   },
   "plugins": {
     "@csmith/release-it-calver-plugin": {
