--- a/package.json
+++ b/package.json
@@ -18,64 +18,23 @@
     "repomix": "repomix --config repomix.config.ts"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^5.2.2",
     "@libsql/client": "^0.15.15",
-    "@mjackson/file-storage": "^0.7.0",
-    "@mjackson/form-data-parser": "^0.9.1",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-menubar": "^1.1.16",
-    "@radix-ui/react-popover": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-router/node": "^7.9.4",
     "@react-router/serve": "^7.9.4",
-    "@tailwindcss/vite": "^4.1.14",
     "better-sqlite3": "^12.4.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
-    "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
-    "lucide-react": "^0.546.0",
     "react": "^19.2.0",
-    "react-day-picker": "^9.11.1",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.65.0",
-    "react-image-crop": "^11.0.10",
     "react-router": "^7.9.4",
-    "recharts": "^3.3.0",
-    "slugify": "^1.6.6",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
-    "ts-node": "^10.9.2",
-    "zod": "^4.1.12"
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@csmith/release-it-calver-plugin": "^2023.12.0",
     "@favoloso/conventional-changelog-emoji": "^0.10.0",
     "@react-router/dev": "^7.9.4",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@tailwindcss/forms": "^0.5.10",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^24.8.1",
@@ -89,7 +48,6 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "jsdom": "^27.0.1",
-    "prettier-plugin-tailwindcss": "^0.7.1",
     "release-it": "^19.0.5",
     "repomix": "^1.9.0",
     "typescript": "^5.9.3",
