--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "repomix": "repomix --config repomix.config.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
     "@libsql/client": "^0.15.15",
     "@react-router/node": "^7.9.4",
     "@react-router/serve": "^7.9.4",
+    "@tailwindcss/vite": "^4.1.17",
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "isbot": "^5.1.31",
+    "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router": "^7.9.4",
+    "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
