--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@libsql/client": "^0.15.15",
     "@react-router/node": "^7.9.4",
     "@react-router/serve": "^7.9.4",
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.1.17",
     "better-sqlite3": "^12.4.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "isbot": "^5.1.31",
