--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "studio": "drizzle-kit studio",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "lint": "eslint . --ext .ts,.tsx",
     "db:migrate": "ts-node ./scripts/migrate.ts",
     "approve-builds": "pnpm approve-builds",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@csmith/release-it-calver-plugin": "^2023.12.0",
     "@favoloso/conventional-changelog-emoji": "^0.10.0",
+    "@playwright/test": "^1.56.1",
     "@react-router/dev": "^7.9.4",
     "@release-it/conventional-changelog": "^10.0.1",
     "@testing-library/jest-dom": "^6.9.1",
