--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-easy-crop": "^5.5.5",
     "react-router": "^7.9.4",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@csmith/release-it-calver-plugin": "^2023.12.0",
@@ -49,6 +52,7 @@
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "drizzle-kit": "^0.31.7",
