--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.17",
     "ts-node": "^10.9.2",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@csmith/release-it-calver-plugin": "^2023.12.0",
