--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.5.5",
     "react-router": "^7.9.4",
     "sharp": "^0.34.5",
