--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jsdom": "^28.0.0",
     "release-it": "^19.2.4",
     "repomix": "^1.11.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
     "vite-tsconfig-paths": "^6.1.1",
