--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "vitest",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "oxlint .",
     "db:migrate": "ts-node ./scripts/migrate.ts",
     "approve-builds": "pnpm approve-builds",
     "release-it": "release-it",
@@ -55,14 +55,9 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@types/uuid": "^11.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.55.0",
-    "@typescript-eslint/parser": "^8.55.0",
     "drizzle-kit": "^0.31.9",
-    "eslint": "^9.39.2",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^7.0.1",
     "jsdom": "^28.0.0",
+    "oxlint": "^1.49.0",
     "release-it": "^19.2.4",
     "repomix": "^1.11.1",
     "tsx": "^4.21.0",
