--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -12,6 +12,7 @@
   },
   "rules": {
     "react/react-in-jsx-scope": "off",
+    "react/jsx-no-constructed-context-values": "off",
     "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-explicit-any": "off",
