--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@csmith/release-it-calver-plugin": "^2023.12.0",
     "@favoloso/conventional-changelog-emoji": "^0.10.0",
     "@playwright/test": "^1.58.2",
@@ -55,6 +57,8 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@types/uuid": "^11.0.0",
+    "@vitejs/plugin-react": "^5.1.4",
+    "babel-plugin-react-compiler": "^1.0.0",
     "drizzle-kit": "^0.31.9",
     "jsdom": "^28.0.0",
     "oxlint": "^1.49.0",
@@ -63,6 +67,7 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.1",
+    "vite-plugin-babel": "^1.5.1",
     "vite-tsconfig-paths": "^6.1.1",
     "vitest": "^4.0.18"
   },
